Gutenberg: Fix block inspector margins and scrollbars (#27477)

--- a/client/gutenberg/editor/style.scss
+++ b/client/gutenberg/editor/style.scss
@@ -49,6 +49,58 @@
 			box-sizing: border-box;
 		}
 	}
+
+	.edit-post-sidebar {
+		.components-panel__body {
+			&:first-child {
+				margin-top: 0;
+			}
+			&:last-child {
+				margin-bottom: 0;
+			}
+			&.editor-block-inspector__advanced {
+				margin-bottom: -16px;
+			}
+		}
+
+		.editor-block-inspector__card {
+			margin-bottom: 0;
+		}
+
+		.editor-post-last-revision__title {
+			width: auto;
+		}
+	}
+
+	// @see https://make.wordpress.org/accessibility/handbook/markup/the-css-class-screen-reader-text/
+	.screen-reader-text {
+		border: 0;
+		clip: rect(1px, 1px, 1px, 1px);
+		clip-path: inset(50%);
+		height: 1px;
+		margin: -1px;
+		overflow: hidden;
+		padding: 0;
+		position: absolute !important;
+		width: 1px;
+		word-wrap: normal !important;
+		&:focus {
+			background-color: #eee;
+			clip: auto !important;
+			clip-path: none;
+			color: #444;
+			display: block;
+			font-size: 1em;
+			height: auto;
+			left: 5px;
+			line-height: normal;
+			padding: 15px 23px 14px;
+			text-decoration: none;
+			top: 5px;
+			width: auto;
+			z-index: 100000; /* Above WP toolbar. */
+		}
+	}
 }
 
 //needed for oembed iframes to appear
